--- a/markdownnotes.html
+++ b/markdownnotes.html
@@ -1,4 +1,16 @@
-#Markdown is a great way to the look of the code within gethub.# 
-#What is Markdown? Markdown is a way to style text on the web.# 
-#You control the display of the document; formatting words as bold or italic, adding images, and creating lists are just a few of the things we can do with Markdown.#
-#Mostly, Markdown is just regular text with a few non-alphabetic characters thrown in, like # or *.# 
+<!DOCTYPE html>
+<html>
+ <head>
+  <title>My Markdown Notes</title>
+     </head>
+         <h2>What is markdown to me? (Notes)</h2>
+             <body>
+                  <p>
+                     #Markdown is a great way to the look of the code within gethub.# 
+                     #What is Markdown? Markdown is a way to style text on the web.# 
+                     #You control the display of the document; formatting words as bold or italic, adding images, and creating lists are just a few of the things we can do with Markdown.#
+                     #Mostly, Markdown is just regular text with a few non-alphabetic characters thrown in, like # or *.#
+                  </p>
+
+</body> 
+</html>
