--- a/Reading-Notes.html
+++ b/Reading-Notes.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
-   <html>
-     <head>
-       <title> 
-       Markdown 6/28/21 
-       </title>
-     </head>
-      <Body>
-         <p>
-           Markdown is a great way to the look of the code within gethub. What is Markdown?
-           Markdown is a way to style text on the web. You control the display of the document; formatting words as bold or italic, adding images, and creating lists are just a few of the things we can do with Markdown. Mostly, Markdown is just regular text with a few non-alphabetic characters thrown in, like # or *. Headers
+<html>
 
-           This is an < h1 > tag
+<head>
+  <title>
+    Markdown 6/28/21
+  </title>
+</head>
 
-           This is an < h2 > tag
+<Body>
+  <p>
+    Markdown is a great way to the look of the code within gethub. What is Markdown?
+    Markdown is a way to style text on the web. You control the display of the document; formatting words as bold or
+    italic, adding images, and creating lists are just a few of the things we can do with Markdown. Mostly, Markdown is
+    just regular text with a few non-alphabetic characters thrown in, like # or *. Headers
 
-           This is an < h6 > tag
+    This is an < h1> tag
 
-           Emphasis
+      This is an < h2> tag
 
-           *This text will be italic*
-           _This will also be italic_
+        This is an < h6> tag
 
-           **This text will be bold**
-           __This will also be bold__
+          Emphasis
 
-           You **can** combine them_`
-           </p>
-    </body>
+          *This text will be italic*
+          _This will also be italic_
+
+          **This text will be bold**
+          __This will also be bold__
+
+          You **can** combine them_`
+  </p>
+</body>
 
 </html>
